syntax = "proto3";

package user;

option go_package = "models/user;user";

service UserService{
  rpc RegisterUser (RegisterUserRequest) returns (RegisterUserResponse);
}

message RegisterUserRequest {
  string full_name = 1;
  string email = 2;
  string password = 3;
}

message RegisterUserResponse {
  string user_id = 1;
  string message = 2;
}